--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "DayDay的工坊",
     "navigationBarTextStyle":"black"
   },
   "permission": {
