完成页面生命周期函数的测试

--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "DayDay的工坊",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle":"black",
+    "enablePullDownRefresh": true
   },
   "permission": {
     "scope.userLocation": {
