各业添加自定义 navbar

--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
       "selectedIconPath": "/images/tabbar-selected.png"
     }]
   },
+  "usingComponents": {
+    "navbar": "/components/navbar/navbar"
+  },
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
