--- a/app.json
+++ b/app.json
@@ -1,39 +1,43 @@
 {
-  "pages":[
-    "pages/index/index",
-    "pages/logs/logs",
-    "pages/map/map"
-  ],
-  "window":{
-    "navigationStyle": "custom"
-  },
-  "tabBar": {
-    "selectedColor": "#409EFF",
-    "list": [{
-      "pagePath": "pages/index/index",
-      "text": "首页",
-      "iconPath": "/images/tabbar.png",
-      "selectedIconPath": "/images/tabbar-selected.png"
-    }, {
-      "pagePath": "pages/logs/logs",
-      "text": "日志",
-      "iconPath": "/images/tabbar.png",
-      "selectedIconPath": "/images/tabbar-selected.png"
-    }, {
-      "pagePath": "pages/map/map",
-      "text": "地图",
-      "iconPath": "/images/tabbar.png",
-      "selectedIconPath": "/images/tabbar-selected.png"
-    }]
-  },
-  "usingComponents": {
-    "navbar": "/components/navbar/navbar"
-  },
-  "permission": {
-    "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序位置接口的效果展示"
-    }
-  },
-  "style": "v2",
-  "sitemapLocation": "sitemap.json"
+    "pages": [
+        "pages/index/index",
+        "pages/logs/logs",
+        "pages/map/map"
+    ],
+    "window": {
+        "navigationStyle": "custom"
+    },
+    "tabBar": {
+        "selectedColor": "#409EFF",
+        "list": [
+            {
+                "pagePath": "pages/index/index",
+                "text": "首页",
+                "iconPath": "/images/tabbar.png",
+                "selectedIconPath": "/images/tabbar-selected.png"
+            },
+            {
+                "pagePath": "pages/logs/logs",
+                "text": "日志",
+                "iconPath": "/images/tabbar.png",
+                "selectedIconPath": "/images/tabbar-selected.png"
+            },
+            {
+                "pagePath": "pages/map/map",
+                "text": "地图",
+                "iconPath": "/images/tabbar.png",
+                "selectedIconPath": "/images/tabbar-selected.png"
+            }
+        ]
+    },
+    "usingComponents": {
+        "navbar": "/components/navbar/navbar"
+    },
+    "permission": {
+        "scope.userLocation": {
+            "desc": "你的位置信息将用于小程序位置接口的效果展示"
+        }
+    },
+    "style": "v2",
+    "sitemapLocation": "sitemap.json"
 }
